Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24248

my_print_defaults is not taking all the values when using -e option which is called from mysql.server (extra_args).

    XMLWordPrintable

Details

    Description

      It is reported by one of our customers the my_print_defaults -e option is not working with MariaDB server 10.5

      Here are the test results:

      At MariaDB server 10.4.17, my_print_defaults -e giving the required output. Whereas at MariaDB server 10.5.x, -e option is not working instead has to specify --defaults-extra-file (alias).

      /root/my.cnf

      [mariadb-10.4]
      key_buffer_size=20M
      max_allowed_packet=250M
      table_open_cache=1000
      table_definition_cache=2000
      read_buffer_size=1M
      thread_cache_size=8
      max_connections=1024
      long_query_time=60
      slow_query_log=1
      

      [root@test001 ~]# mysql --version
      mysql  Ver 15.1 Distrib 10.4.17-MariaDB, for Linux (x86_64) using readline 5.1
       
      [root@test001 ~]# my_print_defaults -e /root/my.cnf --mysqld mysql.server
      --key_buffer_size=20M
      --max_allowed_packet=250M
      --table_open_cache=1000
      --table_definition_cache=2000
      --read_buffer_size=1M
      --thread_cache_size=8
      --max_connections=1024
      --long_query_time=60
      --slow_query_log=1
      

      /root/my.cnf

      [mariadb-10.5]
      key_buffer_size=20M
      max_allowed_packet=250M
      table_open_cache=1000
      table_definition_cache=2000
      read_buffer_size=1M
      thread_cache_size=8
      max_connections=1024
      long_query_time=60
      slow_query_log=1
      

      [root@test001 ~]# mysql --version
      mysql  Ver 15.1 Distrib 10.5.8-MariaDB, for Linux (x86_64) using readline 5.1
      [root@test001 ~]#
      [root@test001 ~]# my_print_defaults -e /root/my.cnf --mysqld mysql.server
      [root@test001 ~]# my_print_defaults --defaults-extra-file=/root/my.cnf --mysqld mysql.server
      --key_buffer_size=20M
      --max_allowed_packet=250M
      --table_open_cache=1000
      --table_definition_cache=2000
      --read_buffer_size=1M
      --thread_cache_size=8
      --max_connections=1024
      --long_query_time=60
      --slow_query_log=1
      

      Attachments

        Issue Links

          Activity

            People

              rucha174 Rucha Deodhar
              suresh.ramagiri@mariadb.com suresh ramagiri
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4d 3h 50m
                  4d 3h 50m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.